k8s/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: dotcom
spec:
  redirectScheme:
    scheme: https
    permanent: true
