k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotcom-deployment
  namespace: dotcom
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotcom
  template:
    metadata:
      labels:
        app: dotcom
    spec:
      containers:
      - name: dotcom
        image: julianone/dotcom:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
