k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotcom-service
  namespace: dotcom
spec:
  selector:
    app: dotcom
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
  type: LoadBalancer
